# tree-sitter-lint-plugin-eslint-builtin

./: .gitignore  .tree-sitter-lint.yml  Cargo.toml
plugin/: Cargo.toml
plugin/src/: all_comments.rs  ast_helpers.rs  directive_comments.rs  directives.rs  kind.rs  lib.rs  macros.rs  string_utils.rs  visit.rs
plugin/src/ast_helpers/: number.rs
plugin/src/code_path_analysis/: code_path.rs  code_path_analyzer.rs  code_path_segment.rs  code_path_state.rs  debug_helpers.rs  fork_context.rs  id_generator.rs  mod.rs
plugin/src/conf/: globals.rs
plugin/src/configs/: all.rs  mod.rs
plugin/src/rules/: accessor_pairs.rs  array_bracket_newline.rs  array_callback_return.rs  class_methods_use_this.rs  complexity.rs  consistent_return.rs  constructor_super.rs  default_case.rs  default_case_last.rs  default_param_last.rs  dot_location.rs  for_direction.rs  getter_return.rs  guard_for_in.rs  line_comment_position.rs  max_nested_callbacks.rs  max_params.rs  max_statements.rs  mod.rs  no_array_constructor.rs  no_async_promise_executor.rs  no_await_in_loop.rs  no_class_assign.rs  no_compare_neg_zero.rs  no_cond_assign.rs  no_const_assign.rs  no_constant_binary_expression.rs  no_constant_condition.rs  no_constructor_return.rs  no_control_regex.rs  no_debugger.rs  no_dupe_args.rs  no_dupe_class_members.rs  no_dupe_else_if.rs  no_dupe_keys.rs  no_duplicate_case.rs  no_duplicate_imports.rs  no_empty_character_class.rs  no_empty_pattern.rs  no_eq_null.rs  (+70 more)
plugin/src/scope/: arena.rs  config_comment_parser.rs  definition.rs  mod.rs  pattern_visitor.rs  reference.rs  referencer.rs  scope.rs  scope_manager.rs  variable.rs
plugin/src/tests/: helpers.rs  mod.rs
plugin/src/tests/scope_analysis/: arguments.rs  catch_scope.rs  class_fields.rs  class_static_blocks.rs  es6_arrow_function_expression.rs  es6_block_scope.rs  es6_catch.rs  es6_class.rs  es6_default_parameters.rs  es6_destructuring_assignments.rs  es6_export.rs  es6_import.rs  es6_iteration_scope.rs  es6_new_target.rs  es6_object.rs  es6_rest_args.rs  es6_super.rs  es6_switch.rs  es6_template_literal.rs  export_star_as_ns_from_source.rs  function_expression_name.rs  get_declared_variables.rs  global_increment.rs  implicit_global_reference.rs  implied_strict.rs  label.rs  mod.rs  nodejs_scope.rs  optimistic.rs  references.rs  typescript.rs  use_strict.rs  with_scope.rs
plugin/src/tests/scope_analysis/util/: ecma_version.rs  mod.rs
plugin/src/utils/: ast_utils.rs  fix_tracker.rs  mod.rs
plugin/src/utils/eslint_utils/: find_variable.rs  get_innermost_scope.rs  get_property_name.rs  get_static_value.rs  get_string_if_constant.rs  mod.rs  reference_tracker.rs
src/: ast_helpers.rs  kind.rs  lib.rs  macros.rs  text.rs  visit.rs
src/code_path_analysis/: code_path.rs  code_path_analyzer.rs  code_path_segment.rs  code_path_state.rs  debug_helpers.rs  fork_context.rs  id_generator.rs  mod.rs
src/rules/: complexity.rs  consistent_return.rs  default_case.rs  default_case_last.rs  for_direction.rs  getter_return.rs  max_nested_callbacks.rs  max_params.rs  mod.rs  no_array_constructor.rs  no_cond_assign.rs  (+39 more)
tree-sitter-lint-plugin-eslint-builtin/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+29 files in other folders)
