[package]
name = "tree-sitter-lint-plugin-eslint-builtin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
Inflector = "0.11.4"
const_format = "0.2.31"
id-arena = "2.2.1"
once_cell = "1.18.0"
regex = "1.9.1"
serde = "1.0.178"
# squalid = { git = "https://github.com/helixbass/squalid", rev = "4a0733c" }
squalid = { path = "../../squalid" }
tree-sitter-lint = { workspace = true }
itertools = "0.11.0"
fancy-regex = "0.11.0"
natord = "1.0.9"
derive_builder = "0.12.0"
serde_regex = "1.1.0"
tracing = "0.1.37"
serde_json = "1.0.105"

[dev-dependencies]
rstest = "0.18.1"
speculoos = "0.11.0"
tracing-subscriber = "0.3.17"
